fix: header align fix

--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-  padding-top: 60px !important;
+  margin-top: -50px !important;
 }
 .hero__content h5 {
   color: #808dad;
